Fixed issue where App was not covering the full height of screens

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,7 +32,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #212529;
   background-image: url("https://www.transparenttextures.com/patterns/stardust.png");
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
